Improved & fixed validation